# master-thesis-code

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
matlab/src/: additional_processing_after_SDMPar.m  read_and_massage_HRTF.m  render_brirs.m
notebooks/: 00-a-first-example.ipynb  06-notebook-header.ipynb  12-create-free-field-equalized-hrtf.ipynb  23-e10-analysis.py  30-dropout-synthesis.py  34b-clean-metrics-analysis-of-e10.ipynb  35-direct-sound-differences.ipynb  36-render-listening-test-brirs.ipynb  37-create-test-yaml.ipynb  38-render-listening-test-brirs-v2.ipynb  39-MUSHRA-analysis1.ipynb  40-check-dataset-ds-onset.ipynb  41-fit-objective-model.ipynb  42-filtered-ds-synthesis.py  43-filtered-ds-analysis1.ipynb  44-export-design-to-latex.ipynb  45-visualize-self-listening-test.ipynb  listening_test_bad_ones.parquet  listening_test_design.parquet  listening_test_good_ones.parquet
src/: BrirComparison.py  SdmIsmAnalysis.py  SimpleSynthesis.py  orientations.py  utils.py
src/data/listening_test_audio/: method.md  process_listening_test_audio.rpp
webMUSHRA-Customizations/: .htaccess  Dockerfile  docker-compose.yml
webMUSHRA-Customizations/configs/: bs1116_nonextrapolating.yaml  default.yaml
webMUSHRA-Customizations/results/bs1116_nonextrapolating/: bs1116.csv
